test/nashorn/script/basic/JDK-8019508.js.EXPECTED
SyntaxError:33:Expected property id but found ,
({,})
  ^
SyntaxError:33:Expected property id but found ,
({, a:2 })
  ^
SyntaxError:33:Expected property id but found ,
({a:3,,})
      ^
SyntaxError:33:Expected comma but found ident
({a:3 b:2}
      ^
